--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script type="text/javascript" src="game-logic.js"></script>
     <title>Document</title>
 </head>
 <body>
-
-    <h1>My personal recipes</h1>
-    <img src="" alt="">
-
+    <script>
+console.log(computerplay());
+</script>
 </body>
 </html>
